fixed digtit spacing issues

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ h1 {
 .big-text {
     font-size: 6rem;
     line-height: 1;
-    margin: 0;
+    margin: 0 2rem;
 }
 
 .countdown-e1 {
